--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 
 
     <div class="part1">
-      <header>
+      <div class="part1a">
+      <div class="header">
         <div class="container header1">
           <div id="hl">
-          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/logo-white.png" alt="logowhite">
+          <img height="27px" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/logo-white.png" alt="logowhite">
            <span id="headerfirstli">Tortoiseshell Optics</span>
          </div>
           <ul>
@@ -21,8 +22,51 @@
           <li>Products</li>
           <li>Contact</li>
         </ul>
+        <span id="menu">menu</span>
       </div>
-      </header>
     </div>
+    </div>
+    <div id="dontjustlook">
+      <p>Don't just look, see.</p>
+    </div>
+    </div>
+
+    <div class="part2">
+      <div class="part2a">
+        <img width="48px" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/paper-icon.png" alt="">
+        <p>Comprehensive Exams</p>
+      </div>
+      <div class="part2a">
+        <img width="90px" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/ruler-icon.png" alt="">
+        <p></br>Custom fittings</p>
+      </div>
+      <div class="part2a">
+        <img width="90px" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/truck-icon.png" alt="">
+        <p></br>Fast Delivery</p>
+      </div>
+    </div>
+
+    <div class="part3">
+      <div class="part3a">
+        <span>PHILOSOPHY</span>
+        <p>Over 75% of our brains are dedicated to one sense: vision.
+           We believe everyone deserves to see the world, not matter what.
+           That’s why we offer eye exams, custom fittings, and quick delivery at a low cost.
+          It’s your vision that makes ours.</p>
+      </div>
+      <div class="part3a">
+        <span>APPOINTMENTS</span>
+        <p>Schedule an appointment by calling us at (312) 654-0987.
+          We’re open Tuesday - Saturday, 9AM - 6PM.</p>
+      </div>
+    </div>
+
+    <div id="part4middle">
+    <div class="part4 container">
+      <img height="27px"src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/logo-black.png" alt="">
+      <span>Copyright Tortoiseshell Optics</span>
+    </div>
+  </div>
+
   </body>
 </html>
